--- a/src/components/ReviewCard.astro
+++ b/src/components/ReviewCard.astro
@@ -1,6 +1,6 @@
 ---
 const {review} = Astro.props;
-const {title, text, stars, image, date, location} = review.frontmatter;
+const {title, text, stars, image, date, location} = review.data;
 ---
 
 <div class="card shadow">
@@ -12,7 +12,7 @@ const {title, text, stars, image, date, location} = review.frontmatter;
 			<div class="card-body p-3 p-xl-5 h-100 d-flex flex-column justify-content-between">
 				<div>
 					<h3 class="card-title h5">{title}</h3>
-					<p class="text-muted small">{location}</p>
+					<p class="text-muted small"><i>{location}</i></p>
 				</div>
 				<div>
 					<div class="q-icon text-center m-2">
