--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,116 +1,13 @@
 ---
-import SocialMediaBar from "../components/SocialMediaBar.astro";
-import HeroImage from "../components/HeroImage.astro";
-import * as Title from "../content/sections/section-title.md"
-import * as Music from "../content/sections/section-music.md";
-import * as About from "../content/sections/section-about.md";
-import * as Reviews from "../content/sections/section-reviews.md";
-import * as Contact from "../content/sections/section-contact.md";
-import Video from "../components/Video.astro";
-import ImageStack from "../components/ImageStack.astro";
-import ReviewSlider from "../components/ReviewSlider.astro";
 import MainLayout from "../layouts/MainLayout.astro";
-import BandMembersList from "../components/BandMembersList.astro";
-import "../styles/index.css"
+import "../styles/index.css";
+import {getLoadedSectionComponents} from "../js/componentLoader.ts";
+const sectionComponents = await getLoadedSectionComponents();
 ---
-
 <MainLayout title="Snack Patrol">
-  <section class="mt-0 pt-0">
-    <div class="vh-100" id="hero-title">
-      <HeroImage
-      header={Title.frontmatter.title}
-      lead={Title.frontmatter.description}
-      backgroundImage="images/poster.jpg"
-      />
-  </section>
-    <section id="music" data-bs-offset="-50">
-      <div class="row">
-        <div class="section-title text-center">
-          <h2 class="m-0">{Music.frontmatter.title}</h2>
-        </div>
-      </div>
-      <div class="row flex-lg-row-reverse align-items-center g-5 p-5">
-        <div class="col-lg-6">
-          <Video url="https://www.youtube.com/embed/9EbtLU6NyCI?si=ro6CzVbcku7dOG0p&controls=0"/>
-        </div>
-        <div class="col-lg-6 d-flex flex-column justify-content-between gap-2" data-aos="fade-up" data-aos-delay="200">
-            <p class="lead">
-              {Music.frontmatter.description}
-            </p>
-            <p>
-              {Music.rawContent()}
-            </p>
-            </div>
-      </div>
-      <div class="row g-5 p-5" data-aos="fade-up" data-aos-delay="200"> 
-        <div class="col-lg-6">
-          <iframe width="100%" height="150" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/905103778&color=%237b149a&auto_play=false&hide_related=true&show_comments=false&show_user=false&show_reposts=false&show_teaser=false"></iframe>
-        </div>
-        <div class="col-lg-6">
-          <p class="lead">Mere tekst</p>
-          <p>Mere tekst</p>
-        </div> 
-      </div>
-    </section>
-
-      <section id="about" data-bs-offset="-50">
-        <div
-          class="row flex-lg-row-reverse align-items-center justify-content-center g-5 p-5 rounded-2">
-          <div class="col-10 col-lg-6 m-0 flex-fill">
-            <img
-              src="images/portrait1.jpg"
-              style="aspect-ratio: 16/9; object-fit:cover;"
-              class="img-fluid rounded-2"
-              alt="About"
-              width="700"
-              height="500"
-              loading="lazy"
-            />
-          </div>
-          <div class="col-lg-6 m-0" data-aos="fade-up" data-aos-delay="200">
-            <h2 class="section-title fw-bold text-body-emphasis lh-1 mb-5">
-              {About.frontmatter.title}
-            </h2>
-            <p class="lead">
-              {About.frontmatter.description}
-            </p>
-            <p class="text-body">
-              {About.rawContent()}
-            </p>
-            <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-              <button
-                type="button"
-                class="btn btn-outline-secondary px-4" data-bs-target="#contact">Kontakt os</button
-              >
-            </div>
-          </div>
-        </div>
-        <div class="row p-5 g-5">
-          <div class="col-lg-6">
-            <Video url="https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Fwww.facebook.com%2FSnackPatrolBand%2Fvideos%2F783649595737217%2F&show_text=false&width=560&t=0"/>
-          </div>
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
-            <BandMembersList/>
-          </div>
-        </div>
-        <div class="row g-5 p-5"> 
-          <SocialMediaBar title={Music.frontmatter.socialMediaBarTitle}/>
-        </div>
-      </section>
-      <section id="reviews" data-bs-offset="-50">
-       <div class="row">
-        <div class="section-title">
-          <h2 class="m-0 text-center">{Reviews.frontmatter.title}</h2>
-        </div>
-        <p class="lead text-center">{Reviews.frontmatter.description}</p>
-       </div>
-        <div class="row px-5 rounded-2">
-            <div class="col col-review-slider rounded-2">
-              <ReviewSlider/>
-            </div>
-        </div>
-      </section>
-  </div>
+{sectionComponents.map(({ component: Component, section: section }) =>
+  Component ? <Component section={section}/> : <div>Component not found</div>
+)}
 </PageCleanLayout>
 
 
