--- a/src/components/ReviewCard.astro
+++ b/src/components/ReviewCard.astro
@@ -1,17 +1,22 @@
 ---
+import type { Review } from '../models/Models.ts';
+
+interface Props {
+	review: Review
+}
 const {review} = Astro.props;
-const {title, text, stars, image, date, location} = review.data;
+const {name, location, text, stars, image, date} = review;
 ---
 
 <div class="card shadow">
 	<div class="row h-100">
 		<div class="col-4 h-100">
-				<img src={image} style="clip-path: circle(89.2% at -15% 19%)" class="h-100 img-fluid rounded-2 object-fit-cover" loading="lazy" alt={title}>
+				<img src={image} style="clip-path: circle(89.2% at -15% 19%)" class="h-100 img-fluid rounded-2 object-fit-cover" loading="lazy" alt="Anmeldelse af Snack Patrol">
 		</div>
 		<div class="col-8">
 			<div class="card-body p-3 p-xl-5 h-100 d-flex flex-column justify-content-between">
 				<div>
-					<h3 class="card-title h5">{title}</h3>
+					<h3 class="card-title h5">{name}</h3>
 					<p class="text-muted small"><i>{location}</i></p>
 				</div>
 				<div>
