--- a/src/components/ReviewCard.astro
+++ b/src/components/ReviewCard.astro
@@ -1,47 +1,18 @@
 ---
-import type { Review } from '../models/Models.ts';
+import type { Review } from "../models/Models.ts";
 
-interface Props {
-	review: Review
+interface Props {
+  review: Review;
 }
-const {review} = Astro.props;
-const {name, location, text, stars, image, date} = review;
+const { review } = Astro.props;
+const { name, location, text, stars, image, date } = review;
 ---
 
-<div class="card shadow">
-	<div class="row h-100">
-		<div class="col-4 h-100">
-				<img src={image} style="clip-path: circle(89.2% at -15% 19%)" class="h-100 img-fluid rounded-2 object-fit-cover" loading="lazy" alt="Anmeldelse af Snack Patrol">
-		</div>
-		<div class="col-8">
-			<div class="card-body p-3 p-xl-5 h-100 d-flex flex-column justify-content-between">
-				<div>
-					<h3 class="card-title h5">{name}</h3>
-					<p class="text-muted small"><i>{location}</i></p>
-				</div>
-				<div>
-					<div class="q-icon text-center m-2">
-						<svg xmlns="http://www.w3.org/2000/svg" width="35px" height="35px" viewBox="0 0 24 24">
-							<path d="M19.417 6.679C20.447 7.773 21 9 21 10.989c0 3.5-2.456 6.637-6.03 8.188l-.893-1.378c3.335-1.804 3.987-4.145 4.248-5.621c-.537.278-1.24.375-1.93.311c-1.804-.167-3.226-1.648-3.226-3.489a3.5 3.5 0 0 1 3.5-3.5c1.073 0 2.1.49 2.748 1.179m-10 0C10.447 7.773 11 9 11 10.989c0 3.5-2.456 6.637-6.03 8.188l-.893-1.378c3.335-1.804 3.987-4.145 4.247-5.621c-.537.278-1.24.375-1.929.311C4.591 12.323 3.17 10.842 3.17 9a3.5 3.5 0 0 1 3.5-3.5c1.073 0 2.1.49 2.748 1.179" />
-						</svg>
-					</div>
-				</div>
-				<p class="card-text">{text}</p>
-				<div class="q-icon text-center m-2">
-					<svg xmlns="http://www.w3.org/2000/svg" width="35px" height="35px" viewBox="0 0 24 24">
-						<path d="M4.583 17.321C3.553 16.227 3 15 3 13.011c0-3.5 2.457-6.637 6.03-8.188l.893 1.378c-3.335 1.804-3.987 4.145-4.247 5.621c.537-.278 1.24-.375 1.929-.311c1.804.167 3.226 1.648 3.226 3.489a3.5 3.5 0 0 1-3.5 3.5a3.87 3.87 0 0 1-2.748-1.179m10 0C13.553 16.227 13 15 13 13.011c0-3.5 2.457-6.637 6.03-8.188l.893 1.378c-3.335 1.804-3.987 4.145-4.247 5.621c.537-.278 1.24-.375 1.929-.311c1.804.167 3.226 1.648 3.226 3.489a3.5 3.5 0 0 1-3.5 3.5a3.87 3.87 0 0 1-2.748-1.179" />
-					</svg>
-				</div>
-				<div>
-					<p class="text-muted small text-end m-0"><i>{date}</i></p>
-				</div>
-			</div>
-		</div>
-	</div>
+<div class="col-10 m-auto">
+  <h4 class="card-title text-muted">{name}</h4>
+  <p class="text-muted">Booking til {location.toLowerCase()}</p>
+  <p class="card-text">{text}</p>
+  <div>
+    <p class="text-muted small text-end m-0 py-2"><i>{date}</i></p>
+  </div>
 </div>
-
-<style>
-	.q-icon {
-		fill: rgb(148 148 148 / 75%);
-	}
-</style>
