--- a/src/components/sections/Music.astro
+++ b/src/components/sections/Music.astro
@@ -1,38 +1,55 @@
 ---
 import type { Section } from "../../models/Models.ts";
+import AOS from "../AOS.astro";
+import SectionContentWrapper from "../SectionContentWrapper.astro";
 import Video from "../Video.astro";
 interface Props {
-  section: Section
+  section: Section;
 }
-const {title, subtitle, description} = Astro.props.section;
+const { section } = Astro.props;
+const { title, subtitle, description, subsections } = section;
 ---
 
-<section id="music" data-bs-offset="-50">
-    <div class="row">
-      <div class="section-title text-center">
-        <h2 class="m-0">{title}</h2>
-      </div>
+<SectionContentWrapper title={section.title} sectionId={section.sectionId} backgroundColor="bg-body">
+  <div class="row p-4 flex-column flex-md-row-reverse">
+    <div class="col col-lg-6">
+      <AOS delay={400}>
+        <Video
+          url="https://www.youtube.com/embed/9EbtLU6NyCI?si=ro6CzVbcku7dOG0p&controls=0"
+        />
+      </AOS>
     </div>
-    <div class="row flex-lg-row-reverse align-items-center g-5 p-5">
-      <div class="col-lg-6">
-        <Video url="https://www.youtube.com/embed/9EbtLU6NyCI?si=ro6CzVbcku7dOG0p&controls=0"/>
-      </div>
-      <div class="col-lg-6 d-flex flex-column justify-content-between gap-2" data-aos="fade-up" data-aos-delay="200">
-          <p class="lead">
-            {subtitle}
-          </p>
-          <p>
-            {description}
-          </p>
-          </div>
+    <div class="col col-lg-6">
+      <AOS>
+        <p class="lead fw-bold">
+          {subtitle}
+        </p>
+        <div>
+          <div set:html={description.html} />
+        </div>
+      </AOS>
     </div>
-    <div class="row g-5 p-5" data-aos="fade-up" data-aos-delay="200"> 
-      <div class="col-lg-6">
-        <iframe width="100%" height="150" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/905103778&color=%237b149a&auto_play=false&hide_related=true&show_comments=false&show_user=false&show_reposts=false&show_teaser=false"></iframe>
+  </div>
+  {
+    subsections.length !== 0 && (
+      <div class="row p-4">
+        <div class="col-lg-6">
+          <AOS>
+            <iframe
+              width="100%"
+              height="150"
+              allow="autoplay"
+              src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/905103778&color=%237b149a&auto_play=false&hide_related=true&show_comments=false&show_user=false&show_reposts=false&show_teaser=false"
+            />
+          </AOS>
+        </div>
+        <div class="col-lg-6">
+          <AOS delay={400}>
+            <p class="lead fw-bold">{subsections.at(0).title}</p>
+            <p>{subsections.at(0).description}</p>
+          </AOS>
+        </div>
       </div>
-      <div class="col-lg-6">
-        <p class="lead">Mere tekst</p>
-        <p>Mere tekst</p>
-      </div> 
-    </div>
-  </section>
+    )
+  }
+</SectionContentWrapper>
