--- a/src/layouts/CleanLayout.astro
+++ b/src/layouts/CleanLayout.astro
@@ -2,12 +2,8 @@
 interface Props {
   title: string;
 }
-import "swiffy-slider/css";
-import "aos/dist/aos.css";
 import "../styles/index.scss";
-import "../styles/animations.scss";
-import "../styles/theme.scss";
-import "../styles/spacing.scss";
+import "../styles/theme.scss"
 
 const { title } = Astro.props;
 ---
@@ -23,24 +19,22 @@ const { title } = Astro.props;
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"></script>
-    <script
-      src="https://unpkg.com/smoothscroll-polyfill/dist/smoothscroll.min.js"
-      crossorigin="anonymous"
-      defer></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/swiffy-slider@1.6.0/dist/js/swiffy-slider.min.js"
-      crossorigin="anonymous"
-      defer></script>
-      <script src="../scripts/themePicker.js"/>
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <body
-    data-aos-easing="ease-out-back"
-    data-aos-duration="1000"
-    data-aos-delay="0">
+  <body>
     <slot />
   </body>
-  <script src="../scripts/aos.js"></script>
-  <script src="../scripts/themePicker.js"></script>
 </html>
+
+<style is:global>
+  @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
+  :root {
+    --poppins: "Poppins", sans serif;
+    --bg-emphasis: -webkit-linear-gradient(45deg, #0450e6, #ff49ae 80%);
+  }
+  html * {
+    -webkit-font-smoothing: antialiased;
+  }
+</style>
