--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,31 +1,29 @@
 ---
-import PageCleanLayout from '../layouts/MainLayout.astro';
+import CleanLayout from "../layouts/CleanLayout.astro";
 ---
 
-<PageCleanLayout title="Siden findes ikke">    
-    <div class="d-flex flex-column align-items-center" style="height: 75vh;">
-        <span class="notfound">Ups..!</span>
-        <span class="lead">.. I did it again</span>
-        <span class="m-auto mb-0">Siden findes ikke</span>
-        <button type="button" class="btn btn-outline-dark mt-2" style="--bs-btn-hover-bg: rgb(109, 2, 109);">Gå til hjemmeside</button>
-
-    </div>
-</PageCleanLayout>
+<CleanLayout title="Siden findes ikke">
+  <div
+    class="bg-body-secondary d-flex flex-column align-items-center justify-content-center vh-100 vw-100">
+    <span class="notfound-title">Oops..!</span>
+    <span class="lead">.. I did it again</span>
+    <span class="mt-4">Siden findes ikke</span>
+    <a type="button" role="button" href="/" class="btn btn-outline-dark mt-2"
+      >Gå til hjemmeside</a
+    >
+  </div>
+</CleanLayout>
 
 <style>
-    .notfoundcontainer {
-        height: 200px;
-        position: relative;
-    }
-
-    .notfound {
-        font-family: 'Railway', sans-serif;
-        font-size: 200px;
-        font-weight: 900;
-        background: url(images/poster.jpg) no-repeat;
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-        background-size: cover;
-        background-position: center;
-    }
+  .notfound-title {
+    font-family: "Poppins", sans-serif;
+    font-size: 200px;
+    font-weight: 900;
+    background: url(images/poster.jpg) no-repeat;
+    background-blend-mode: darken;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-size: cover;
+    background-position: center;
+  }
 </style>
