--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,11 +4,16 @@ import MainLayout from "../layouts/MainLayout.astro";
 import Navbar from "../components/Navbar.astro";
 import { getLoadedSectionComponents } from "../scripts/componentLoader.ts";
 import { getSections } from "../scripts/hygraph.js";
+
 import Footer from "../components/Footer.astro";
+import About from "../components/sections/About.astro";
+import FAQ from "../components/sections/FAQ.astro";
+import Header from "../components/sections/Header.astro";
+import Reviews from "../components/sections/Reviews.astro";
+import Music from "../components/sections/Music.astro";
 
 const sectionsData = await getSections();
 const sections = sectionsData.data.sections as Section[];
-const sectionComponents = await getLoadedSectionComponents(sections);
 const sectionsSorted = sections.sort(
   (prevSection, nextSection) => prevSection.order - nextSection.order
 );
@@ -18,10 +23,18 @@ const sectionsSorted = sections.sort(
   <Navbar sections={sectionsSorted} />
   <div data-bs-spy="scroll" data-bs-target="#navbar-scroll" data-bs-smooth-scroll="true">
     {
-      sectionComponents.map(
-        ({ component: Component, section: section }) =>
-          Component && <Component section={section} />
-      )
+
+      sectionsSorted.map(
+        (section) => {
+          return (
+            section.sectionId == "about" ? <About section={section}/> :
+            section.sectionId == "faq" ? <FAQ section={section}/> :
+            section.sectionId == "header" ? <Header section={section}/> :
+            section.sectionId == "reviews" ? <Reviews section={section}/> :
+            section.sectionId == "music" ? <Music section={section}/> :
+            null
+          );
+      })
     }
   </div>
   <Footer />
