change poster image path to public folder

--- a/src/components/HeroImage.astro
+++ b/src/components/HeroImage.astro
@@ -4,10 +4,9 @@ import SocialMediaBar from "./SocialMediaBar.astro";
 
 interface Props {
   section: Section;
-  backgroundImage: string;
 }
 
-const { backgroundImage, section } = Astro.props;
+const { section } = Astro.props;
 ---
 
 <header
