--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -165,7 +165,7 @@ footer .social-media {
     right: 0;
     bottom: 0;
     z-index: -1;
-    background-image: linear-gradient(rgb(0 0 0 / 35%), rgb(1 1 1 / 21%)), url(images/poster.jpg);
+    background-image: linear-gradient(rgb(0 0 0 / 35%), rgb(1 1 1 / 21%)), url(/images/poster.jpg);
     background-size: cover;
     background-position: center;
     transition: opacity .5s ease-out;
