Deleting image reference from assets folder

--- a/src/components/sections/Header.astro
+++ b/src/components/sections/Header.astro
@@ -1,7 +1,6 @@
 ---
 import type { Section } from "../../models/Models.ts";
 import HeroImage from "../HeroImage.astro";
-import backgroundImage from "../../assets/poster.jpg"
 
 interface Props {
   section: Section;
@@ -11,5 +10,5 @@ const { section } = Astro.props;
 ---
 
 <section class="mt-0 py-0" id="header">
-    <HeroImage section={section} backgroundImage={backgroundImage.src} />
+    <HeroImage section={section} />
 </section>
