--- a/src/components/sections/Reviews.astro
+++ b/src/components/sections/Reviews.astro
@@ -18,7 +18,7 @@ const reviews = reviewsData.data.reviews;
   subtitle={section.subtitle}
   sectionId={section.sectionId}>
   <AOS>
-    <div class="row p-4 px-lg-5 justify-content-center">
+    <div class="row p-lg-4 px-lg-5 justify-content-center">
       <div class="col col-lg-10 col-review-slider rounded-2">
         <div class="text-center py-2">
           <svg
