--- a/src/components/sections/About.astro
+++ b/src/components/sections/About.astro
@@ -2,7 +2,6 @@
 import type { Section } from "../../models/Models.ts";
 import AOS from "../AOS.astro";
 import BandMembersList from "../BandMembersList.astro";
-import HeroImage from "../HeroImage.astro";
 import SectionContentWrapper from "../SectionContentWrapper.astro";
 import Video from "../Video.astro";
 
@@ -25,8 +24,8 @@ const memberSection = subsections.find(
   sectionId={section.sectionId}
   backgroundColor="bg-body-secondary"
   >
-  <div class="row p-4 flex-md-row-reverse justify-content-center rounded-2">
-    <div class="col-10 col-lg-6 flex-fill align-items-lg-center">
+  <div class="row p-lg-4 flex-md-row-reverse justify-content-center rounded-2 align-items-lg-center gap-4 gap-lg-0 justify-content-center">
+    <div class="col-10 col-lg-6 d-flex flex-fill mt-0">
       <AOS>
         <img
           src="images/portrait1.jpg"
@@ -46,13 +45,13 @@ const memberSection = subsections.find(
     </div>
   </div>
 
-  <div class="row flex-column flex-lg-row p-4">
+  <div class="row flex-column flex-lg-row p-lg-4 align-items-center">
     {
       vlogSection && (
         <div class="col col-lg-6">
           <AOS>
             <Video url="https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Fwww.facebook.com%2FSnackPatrolBand%2Fvideos%2F783649595737217%2F&show_text=false" />
-            <p class="text-center text-muted small pt-2">
+            <p class="text-lg-center text-muted small pt-2">
               <i>{vlogSection.subtitle}</i>
             </p>
           </AOS>
@@ -115,12 +114,5 @@ const memberSection = subsections.find(
       background-position: center;
       transition: opacity .5s ease-out;
       background-blend-mode: hard-light;
-      clip-path: polygon(100% 100%, 0% 100% , 0.00% 19.36%, 2.00% 19.33%, 4.00% 19.25%, 6.00% 19.12%, 8.00% 18.94%, 10.00% 18.70%, 12.00% 18.42%, 14.00% 18.08%, 16.00% 17.70%, 18.00% 17.28%, 20.00% 16.81%, 22.00% 16.31%, 24.00% 15.77%, 26.00% 15.20%, 28.00% 14.59%, 30.00% 13.96%, 32.00% 13.31%, 34.00% 12.64%, 36.00% 11.95%, 38.00% 11.26%, 40.00% 10.55%, 42.00% 9.84%, 44.00% 9.14%, 46.00% 8.43%, 48.00% 7.74%, 50.00% 7.06%, 52.00% 6.39%, 54.00% 5.75%, 56.00% 5.13%, 58.00% 4.53%, 60.00% 3.97%, 62.00% 3.44%, 64.00% 2.95%, 66.00% 2.50%, 68.00% 2.09%, 70.00% 1.73%, 72.00% 1.41%, 74.00% 1.14%, 76.00% 0.92%, 78.00% 0.75%, 80.00% 0.64%, 82.00% 0.58%, 84.00% 0.57%, 86.00% 0.61%, 88.00% 0.71%, 90.00% 0.86%, 92.00% 1.06%, 94.00% 1.31%, 96.00% 1.62%, 98.00% 1.96%, 100.00% 2.36%);
-    }
-
-    .sd {
-    background: var(--bg-emphasis);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
     }
 </style>
