--- a/src/components/sections/Music.astro
+++ b/src/components/sections/Music.astro
@@ -11,7 +11,7 @@ const { title, subtitle, description, subsections } = section;
 ---
 
 <SectionContentWrapper title={section.title} sectionId={section.sectionId} backgroundColor="bg-body">
-  <div class="row p-4 flex-column flex-md-row-reverse">
+  <div class="row p-lg-4 flex-column flex-md-row-reverse align-items-center justify-content-center">
     <div class="col col-lg-6">
       <AOS delay={400}>
         <Video
@@ -32,7 +32,7 @@ const { title, subtitle, description, subsections } = section;
   </div>
   {
     subsections.length !== 0 && (
-      <div class="row p-4">
+      <div class="row p-lg-4">
         <div class="col-lg-6">
           <AOS>
             <iframe
