Mail address correction

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -9,7 +9,7 @@ import SocialMediaBar from "./SocialMediaBar.astro";
     <span>{new Date().getFullYear()} Snack Patrol</span>
 
     <a
-      href="mailto:snackpatrolband@gmail.com"
+      href="mailto:snackpatrolbooking@gmail.com"
       target="_blank"
       class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
       snackpatrolband@gmail.com
